--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             padding: 0;
             width: 100%;
         }
+        .bbody {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+        }
         .aq-container {
             background-color: #eee;
             padding: 12px;
