--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
             </div>
         </div>
         <div class="aq-player-container">
-            <audio id="aq-player" controls autoplay src="https://cdn.islamic.network/quran/audio/128/ar.alafasy/262.mp3"></audio>
+            <div class="aq-player-dashboard">
+                <div id="aq-chapter-info"></div>
+                <div id="aq-chapter-info"></div>
+            </div>
+            <audio id="aq-player" controls autoplay src=""></audio>
         </div>
     </div>
     <script src="js/audio-quran.js"></script>
